# web_server

./: .gitignore  Cargo.toml  README.md
css/: schedule.css
public/css/: base.css  schedule.css  server.css
public/scripts/: schedule.js  server.js
src/: database.rs  main.rs
src/back/: mod.rs  schedule.rs  server.rs
src/front/: common.rs  elements.rs  home_page.rs  mod.rs  schedule_page.rs  server_page.rs
src/schedule/: schedule.rs
