[package]
name = "web_scehudule"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bincode = "2.0.1"
chrono = "0.4.42"
hypertext = { version = "0.12.1", features = ["alloc"] }
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sled = "0.34.7"
tokio = { version = "1.45.0", features = ["full"] }
